// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabButton renders a TabButton 1`] = `
<div>
  <button
    class="sc-AxiKw eJoaTp 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxirZ iPjTQj"
    >
      <div
        class="sc-AxjAm iGWjaQ"
      >
        Refine Results
      </div>
    </div>
  </button>
</div>
`;

exports[`TabButton renders multiple TabButtons 1`] = `
<div>
  <button
    class="sc-AxiKw eJoaTp 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxirZ iPjTQj"
    >
      <div
        class="sc-AxjAm iGWjaQ"
      >
        Refine Results1
      </div>
    </div>
  </button>
  <button
    class="sc-AxiKw eJoaTp 
    tab-button
    
  "
    type="button"
  >
    <div
      class="sc-AxirZ iPjTQj"
    >
      <div
        class="sc-AxjAm iGWjaQ"
      >
        Refine Results2
      </div>
    </div>
  </button>
</div>
`;

exports[`TabPanel renders a TabPanel 1`] = `
<div>
  <div
    class="sc-AxgMl hlkkIH 
    tab-panel
    
  "
    name="tab-panel-test"
  >
    <p>
      View Type
    </p>
  </div>
</div>
`;

exports[`TabPanel renders additional classNames 1`] = `
<div>
  <div
    class="sc-AxgMl hlkkIH 
    tab-panel
    test classes
  "
    name="tab-panel-test1"
  >
    <p>
      test1
    </p>
  </div>
  <div
    class="sc-AxgMl hlkkIH 
    tab-panel
    another-class
  "
    name="tab-panel-test2"
  >
    <p>
      test2
    </p>
  </div>
</div>
`;

exports[`TabPanel renders multiple TabPanels 1`] = `
<div>
  <div
    class="sc-AxgMl hlkkIH 
    tab-panel
    
  "
    name="tab-panel-test1"
  >
    <p>
      test1
    </p>
  </div>
  <div
    class="sc-AxgMl hlkkIH 
    tab-panel
    
  "
    name="tab-panel-test2"
  >
    <p>
      test2
    </p>
  </div>
  <div
    class="sc-AxgMl hlkkIH 
    tab-panel
    
  "
    name="tab-panel-test3"
  >
    <p>
      test3
    </p>
  </div>
  <div
    class="sc-AxgMl hlkkIH 
    tab-panel
    
  "
    name="tab-panel-test4"
  >
    <p>
      test4
    </p>
  </div>
</div>
`;

exports[`Tabs renders a border 1`] = `
<div>
  <div
    class="sc-AxhCb etdYAC 
    tabs-container
    
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhUy bzQxEL tab-button-wrap"
    >
      <button
        class="sc-AxiKw gMuLxb 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxirZ bDbtlN"
        >
          <div
            class="sc-AxjAm iGWjaQ"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxiKw eJoaTp 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxirZ iPjTQj"
        >
          <div
            class="sc-AxjAm iGWjaQ"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxgMl jNXIGy 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxgMl hlkkIH 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs renders additional classNames 1`] = `
<div>
  <div
    class="sc-AxhCb canFhF 
    tabs-container
    test classes
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhUy bzQxEL tab-button-wrap"
    >
      <button
        class="sc-AxiKw gMuLxb 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxirZ bDbtlN"
        >
          <div
            class="sc-AxjAm iGWjaQ"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxiKw eJoaTp 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxirZ iPjTQj"
        >
          <div
            class="sc-AxjAm iGWjaQ"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxgMl jNXIGy 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxgMl hlkkIH 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;

exports[`Tabs renders correctly with minimal props 1`] = `
<div>
  <div
    class="sc-AxhCb canFhF 
    tabs-container
    
  "
    style="min-height: initial;"
  >
    <div
      class="sc-AxhUy bzQxEL tab-button-wrap"
    >
      <button
        class="sc-AxiKw gMuLxb 
    tab-button
    active
  "
        type="button"
      >
        <div
          class="sc-AxirZ bDbtlN"
        >
          <div
            class="sc-AxjAm iGWjaQ"
          >
            Refine Results
          </div>
        </div>
      </button>
      <button
        class="sc-AxiKw eJoaTp 
    tab-button
    
  "
        type="button"
      >
        <div
          class="sc-AxirZ iPjTQj"
        >
          <div
            class="sc-AxjAm iGWjaQ"
          >
            Edit Details
          </div>
        </div>
      </button>
    </div>
    <div
      class="sc-AxgMl jNXIGy 
    tab-panel
    
  "
      name="refine-results-1"
    >
      <p>
        View Type
      </p>
    </div>
    <div
      class="sc-AxgMl hlkkIH 
    tab-panel
    
  "
      name="edit-details-1"
    >
      <p>
        Tab two content
      </p>
      <p>
        stuff
      </p>
    </div>
  </div>
</div>
`;
